# terraform.py

./: .gitignore  .travis.yml  CHANGELOG.md  HISTORY.md  MANIFEST.in  README.md  setup.cfg  setup.py  terraform.py  test_requirements.txt
scripts/: terraform_inventory.sh
src/ati/: __init__.py  cli.py  errors.py  terraform.py
src/ati/remote/: __init__.py  choose.py  s3.py  s3_remote_state.py
tests/: conftest.py  test_aws.py  test_azure.py  test_azurerm.py  test_clc.py  test_cli.py  test_common.py  test_ddcloud.py  test_digitalocean.py  test_gce.py  test_openstack.py  test_packet.py  test_scaleway.py  test_softlayer.py  test_triton.py  test_ucs.py  test_vsphere.py
tests/fixtures/: hypothesis_state.py  local_init.json  remote_init.json  remote_state.json
tests/remote/: test_remote.py  test_s3.py
