[coverage:run]
branch=True
omit=setup.py

[flake8]
exclude=docs/*

[metadata]
description-file=README.md

[pydocstyle]
match=(?!__init__)(?!test_)(?!conf).*\.py

[pytest]
addopts=--cov=ati --cov-report=term-missing --durations=3 --ff --flakes --mccabe --strict --maxfail=5 -ra --tb=long
mccabe-complexity=15
pep8ignore=docs/* ALL

[pytest:flake8]
exclude=docs/*

[tool:pytest]
addopts=--cov=ati --cov-report=term-missing --durations=3 --ff --flakes --mccabe --strict --maxfail=5 -ra --tb=long
mccabe-complexity=15
pep8ignore=docs/* ALL
